src/objects/Service_Impacted__c.object
<CustomObject>
    <description>This object will contain location details which will be linked to planned maintenance cases.</description>
    <fields>
        <fullName>B2B_Case_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a lookup field which maps to Account Number in Case Object</description>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Location_Impacteds1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Care_Service_Record_Id__c</fullName>
        <description>This will store the SFDC Service Record Id.</description>
        <label>Service Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_External_case_number__c</fullName>
        <externalId>true</externalId>
        <label>External case number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Postcode__c</fullName>
        <label>Postcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Service Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Service_Category__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Service_Id__c</fullName>
        <label>Service Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_B2B_Care_Equipment_Type__c</fullName>
        <description>This records the equipment type.</description>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CMTS</fullName>
                </value>
                <value>
                    <fullName>Amplifier</fullName>
                </value>
                <value>
                    <fullName>HUB</fullName>
                </value>
                <value>
                    <fullName>NODE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_B2B_Care_Equipment_id__c</fullName>
        <description>This records the Equipment Id.</description>
        <label>Equipment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_House_Number_Extension__c</fullName>
        <label>House Number Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_House_Number__c</fullName>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Service_Affected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for Service Id Record Type. It will hold the service which is affected.</description>
        <label>Service Affected</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Services Impacted</relationshipLabel>
        <relationshipName>Services_Impacted</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Impacted</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Service Impacted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Impacted</pluralLabel>
    <recordTypes>
        <fullName>LG_B2B_Care_Address_and_Service_Type</fullName>
        <active>true</active>
        <description>This stores address and service type records for Service impacted object.</description>
        <label>Address and Service Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Care_Service_Id</fullName>
        <active>true</active>
        <description>This stores service id type records for Service impacted object.</description>
        <label>Service Id</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_B2B_Crae_Equipment</fullName>
        <active>true</active>
        <description>This stores equipment type records for service impacted object.</description>
        <label>Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Care_Topology_Data_from_SBC</fullName>
        <active>true</active>
        <label>Topology Data from SBC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>